[package]
name = "willow-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.4"
blake3 = "1.5.1"
bytes = "1.6.0"
genawaiter = "0.99.1"
hex = "0.4.3"
itertools = "0.13.0"
postcard = { version = "1.0.8", features = ["use-std"] }
proptest = "1.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
redb = "2.0.0"
ref-cast = "1.0.22"
self_cell = "1.0.3"
serde = { version = "1.0.198", features = ["derive"] }
smallvec = "1.13.2"
test-strategy = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zerocopy = { version = "0.7.32", features = ["derive"] }

[dev-dependencies]
testresult = "0.4.1"
