[package]
name = "willow-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.1"
genawaiter = "0.99.1"
hex = "0.4.3"
itertools = "0.13.0"
redb = "2.0.0"
ref-cast = "1.0.22"
rpds = "1.1.0"
self_cell = "1.0.4"
smallvec = "1.13.2"
tracing = "0.1.40"
zerocopy = { version = "0.7.32", features = ["derive"] }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
proptest = "1.5.0"
rand = { version = "0.8.5", features = ["small_rng"] }
test-strategy = "0.4.0"
testresult = "0.4.1"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

[features]
mock-willow = []
default = ["mock-willow"]

[profile.release]
debug = true

[[example]]
name = "fs"
path = "examples/fs.rs"
required-features = ["mock-willow"]
